src/test/ui/asm/inline-syntax.stderr
error: intel sytnax is the default syntax, and trying to use this directive may cause issues
  --> $DIR/inline-syntax.rs:5:15
   |
LL |         asm!(".intel_syntax noprefix", "nop");
   |               ^^^^^^^^^^^^^^^^^^^^^^ help: Remove this assembler directive

error: intel sytnax is the default syntax, and trying to use this directive may cause issues
  --> $DIR/inline-syntax.rs:7:15
   |
LL |         asm!(".intel_syntax aaa noprefix", "nop");
   |               ^^^^^^^^^^^^^ help: Remove this assembler directive: `aaa noprefix`

error: using the .att_syntax directive may cause issues, use the att_syntax option instead
  --> $DIR/inline-syntax.rs:9:15
   |
LL |         asm!(".att_syntax noprefix", "nop");
   |               ^^^^^^^^^^^^^^^^^^^^
   |
help: Remove the assembler directive and replace it with options(att_syntax)
   |
LL |         asm!("", "nop", options(att_syntax));
   |              --       ^^^^^^^^^^^^^^^^^^^^^

error: using the .att_syntax directive may cause issues, use the att_syntax option instead
  --> $DIR/inline-syntax.rs:11:15
   |
LL |         asm!(".att_syntax bbb noprefix", "nop");
   |               ^^^^^^^^^^^
   |
help: Remove the assembler directive and replace it with options(att_syntax)
   |
LL |         asm!(" bbb noprefix", "nop", options(att_syntax));
   |              --                    ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

